# OeConfJNB01

./: README.md  bblayers.conf  build-oe-yocto.sh  local.conf
opencv/: CMakeLists.txt  HelloOpenCV.cpp
